--- a/yaml files/Windows VM session/fiesta_app.yaml
+++ b/yaml files/Windows VM session/fiesta_app.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: npm-fiesta
-        image: public.ecr.aws/n5p3f3u5/npm-fiesta:latest
+        image: wessenstam/npm-fiesta:latest
         env:
           - name: DB_PASSWD
             value: fiesta
