--- a/yaml files/npm-fiesta.yaml
+++ b/yaml files/npm-fiesta.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: npm-fiesta
-        image: public.ecr.aws/n5p3f3u5/npm-fiesta:latest
+        image: wessenstam/npm-fiesta:latest
         ports:
         - containerPort: 3000
 ---
