--- a/yaml files/Windows VM session/fiesta_app.yaml
+++ b/yaml files/Windows VM session/fiesta_app.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: npm-fiesta
-        image: wessenstam/npm-fiesta:latest
+        image: ntnxgteworkshops/npm-fiesta:latest
         env:
           - name: DB_PASSWD
             value: fiesta
